# MultiAgentic_HRMS

./: main.py  pyproject.toml  requirements.txt
HR/: build_all_agents.py  hr_agents.py  hr_orchestrator.py  hr_tools.py
hr/: hr_leave_tools.py  hr_supervisor.py  hr_worktype_tools.py  ui.py
