[project]
name = "multi-hrms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.12.15",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "google-api-python-client>=2.181.0",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.10",
    "langchain-groq>=0.3.8",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-openai>=0.3.33",
    "langgraph>=0.6.7",
    "langgraph-supervisor>=0.0.29",
    "langmem>=0.0.29",
    "mcp>=1.14.0",
    "streamlit>=1.49.1",
    "uvicorn>=0.35.0",
]
